@@ -1,7 +1,12 @@
 Mar 13th, 2006: Alex Burger <alex_b@users.sourceforge.net>
+- Fix a bug where snmpttconvertmib does not handle ARGUMENTS lines
+  that have $1, $2 etc instead of %0, %1.  Thanks to Todd A. Green.
+  Bug 1438394.
+
+Mar 12th, 2006: Alex Burger <alex_b@users.sourceforge.net>
 - Move all SQL update code to subroutines (mysql_update etc).
 - Added logging of trap statistics to SQL table.  Added *table_statistics
-  snmptt.ini variables to define the table to be used.
+  snmptt.ini variable to define the table to be used.
 - Added ability to add custom columns to *_table and *_table_unknown
   tables.  Added sql_custom_columns and sql_custom_columns_unknown
   snmptt.ini options.
